--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -5,9 +5,6 @@ on:
     - cron: "0 * * * *"
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
   sync:
     runs-on: ubuntu-latest
@@ -19,6 +16,12 @@ jobs:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
 
+      - name: 获取用户ID
+        id: get-user-id
+        run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+
       - name: 检出仓库代码
         uses: actions/checkout@v4
 
@@ -26,15 +29,19 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: main
+          sparse-checkout: meme_generator/memes
           repository: MemeCrafters/meme-generator
           path: ${{ github.workspace }}/meme/memes
+          sparse-checkout-cone-mode: false
 
       - name: 检出memes_emoji仓库代码
         uses: actions/checkout@v4
         with:
           ref: main
+          sparse-checkout: emoji
           repository: anyliew/meme_emoji
           path: ${{ github.workspace }}/meme/memes_emoji
+          sparse-checkout-cone-mode: false
 
       - name: 设置 rsync
         uses: GuillaumeFalourd/setup-rsync@v1.2
@@ -42,21 +49,23 @@ jobs:
       - name: 清理数据并同步
         run: |
           
-          rsync -a --delete \
-            ${{ github.workspace }}/meme/memes/ \
+          rsync -a --delete --exclude='README.md' \
+            ${{ github.workspace }}/meme/memes/meme_generator/memes/ \
             meme_generator/memes/
             
           rsync -a --delete --exclude='README.md' \
             ${{ github.workspace }}/meme/memes_emoji/emoji/ \
-            meme_generator/meme/memes_emoji/
+            meme_generator/memes_emoji
           
           rm -rf ${{ github.workspace }}/meme
             
       - name: 提交并推送更改
         uses: actions-js/push@master
         with:
+          author_name: ${{ steps.app-token.outputs.app-slug }}[bot]
+          author_email: ${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com
           github_token: ${{ steps.app-token.outputs.token }}
-          message: "同步表情更新"
+          message: "chore: 同步表情更新"
           branch: ${{ github.ref }}
 
       - name: 触发docker构建
