--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -24,6 +24,12 @@ jobs:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
 
+      - name: 获取用户ID
+        id: get-user-id
+        run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+
       - name: 检出仓库代码
         uses: actions/checkout@v4
 
@@ -38,8 +44,10 @@ jobs:
       - name: 提交并推送更改
         uses: actions-js/push@master
         with:
+          author_name: ${{ steps.app-token.outputs.app-slug }}[bot]
+          author_email: ${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com
           github_token: ${{ steps.app-token.outputs.token }}
-          message: "更新 resource_list.json"
+          message: "chore: 更新 resource_list.json"
           branch: "main"
 
   update_wiki:
@@ -52,6 +60,12 @@ jobs:
         with:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
+
+      - name: 获取用户ID
+        id: get-user-id
+        run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
 
       - name: 检出仓库代码
         uses: actions/checkout@v4
@@ -83,8 +97,10 @@ jobs:
       - name: 提交并推送 Wiki 更新
         uses: actions-js/push@master
         with:
+          author_name: ${{ steps.app-token.outputs.app-slug }}[bot]
+          author_email: ${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com
           directory: "wiki"
           repository: ${{ github.repository }}.wiki
           github_token: ${{ steps.app-token.outputs.token }}
-          message: "更新 Meme 列表"
+          message: "chore: 更新 Meme 列表"
           branch: "master"
